force-app/main/default/objects/Risk_Assessment__c/fields/Abuse_Score__c.field-meta.xml
<CustomField>
    <fullName>Abuse_Score__c</fullName>
    <label>Abuse Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>