force-app/main/default/objects/Risk_Assessment__c/fields/Benefit_CaseId__c.field-meta.xml
<CustomField>
    <fullName>Benefit_CaseId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Benefit Case</label>
    <referenceTo>vlocity_ps__Case__c</referenceTo>
    <relationshipLabel>Risk Assessments</relationshipLabel>
    <relationshipName>Risk_Assessments</relationshipName>
    <type>Lookup</type>
</CustomField>