force-app/main/default/objects/Risk_Assessment__c/fields/Neglect_Score__c.field-meta.xml
<CustomField>
    <fullName>Neglect_Score__c</fullName>
    <label>Neglect Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>