force-app/main/default/objects/Risk_Assessment__c/fields/Planned_Action__c.field-meta.xml
<CustomField>
    <fullName>Planned_Action__c</fullName>
    <label>Planned Action</label>
    <length>200</length>
    <type>Text</type>
</CustomField>