force-app/main/default/objects/Risk_Assessment__c/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <label>Recommended Action</label>
    <length>200</length>
    <type>Text</type>
</CustomField>